<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayContact" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditTextStreet"
            android:layout_below="@+id/EditTextStreet"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditTextName"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditTextCity"
            android:layout_alignParentBottom="false"
            android:onClick="onClick"
            android:text="Delete Contact"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="375dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Edit Contact"
            android:id="@+id/button1"
            android:onClick="onClick"
            android:layout_marginBottom="100dp"
            android:layout_alignParentBottom="false"
            android:layout_alignLeft="@+id/EditTextCity"
            android:layout_marginTop="325dp"
            android:layout_marginLeft="0dp"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Save Contact"
            android:id="@+id/button3"
            android:onClick="onClick"
            android:layout_marginBottom="100dp"
            android:layout_alignParentBottom="false"
            android:layout_alignLeft="@+id/EditTextCity"
            android:layout_marginTop="425dp"
            android:layout_marginLeft="0dp"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditTextEmail"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditTextPhone"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/EditTextEmail"
            android:layout_alignLeft="@+id/textView5"
            android:text="@string/street"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/EditTextCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/EditTextName"
            android:layout_below="@+id/EditTextEmail"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/EditTextCity"
            android:layout_alignBottom="@+id/EditTextCity"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/EditTextEmail"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/EditTextStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditTextName"
            android:layout_below="@+id/EditTextPhone"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/EditTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditTextStreet"
            android:layout_below="@+id/EditTextName"
            android:ems="10"
            android:inputType="phone|text" />




    </RelativeLayout>
</ScrollView>



